fix sub nav bar positioning on firefox

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -104,6 +104,7 @@ html,body {
 #sub-nav-items {
 	width: 1200px;
 	height: 40px;
+	float: left;
 }
 
 #sub-nav-items ul {
